--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,13 @@ header h1 {
     /* margin-top: 1.5rem; */
 }
 
-h2.small {
+h2.slogan {
     margin-top: 1rem;
     font-family: "Poppins", sans-serif;
-    font-weight: 500;
+    font-weight: 300;
     text-transform: uppercase;
     font-size: 1.5rem;
+    letter-spacing: 1.5px;
     text-align: center;
     color: #fde420;
 }
@@ -102,6 +103,10 @@ header a {
     padding-bottom: 6%;
 }
 
+.no-extra-pad p {
+    padding: 0;
+}
+
 .main-container {
     display: flex;
     flex-direction: column;
@@ -115,7 +120,8 @@ header a {
 
 .main-container.cards-bg {
     position: relative;
-    background-color: #1b1f21;
+    /* background-color: #1b1f21; */
+    background-color: #80929b;
 }
 
 img.cards-bg  {
@@ -163,28 +169,34 @@ section.business-cards {
     /* overflow: auto; */
 }
 
-.cta h2 {
+h2.med {
     color: #02679b;
-    font-size: 2rem;
-}
-
-.content-container p, .cta p  {
-    font-family: "Poppins", serif;
-    font-weight: 400;
-    font-size: 1.4rem;
     letter-spacing: 1px;
-    text-align: left;
-    /* padding-left: 5%; */
-    color: #1a1919;
+    font-size: 2rem;
+    text-transform: uppercase;
 }
 
-.cta p {
-    padding-top: 1rem;
-    padding-left: 5%;
+.content-container p {
+    font-family: "Poppins", serif;
+    margin-top: 1rem;
+    letter-spacing: .7px;
+}
+
+p.cta-desc {
+    /* color: red; */
+    text-align: left;
+    line-height: 1.3;
+    font-size: 1.5rem;
+    padding-left: 2%;
 }
 
 .cta .site-button {
     width: fit-content;
+}
+
+.custom-card .cta-small {
+    /* color: #242224; */
+    font-size: 1.2rem;
 }
 
 .city-bg-image {
@@ -284,7 +296,7 @@ section.business-cards {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
     0 1px 3px rgba(0, 0, 0, 0.433);
-    background-color: #4c4c4c;
+    background-color: #f1e8e8;
 }
 
 .card img {
@@ -344,7 +356,7 @@ section.business-cards {
     /* font-style: italic; */
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: white;
+    color: #434343;
 }
 
 .business-name {
@@ -404,7 +416,7 @@ img.spotlight-logo {
     text-align: center;
     width: 100%;
     background-color: white;
-    padding: 2rem; /* p-8 */
+    padding: 1rem; 
     border-radius: 0.75rem; /* rounded-xl */
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg */
     transition-property: box-shadow;
@@ -419,13 +431,8 @@ img.spotlight-logo {
 .custom-card h3 {
     color: #0a80ba;
     font-size: 1.5rem;
-}
-
-.custom-card p {
-    font-size: 1.1rem;
-    letter-spacing: .5px;
-    line-height: 1.4;
-    color: #424242;
+    text-transform: uppercase;
+    letter-spacing: .8px;
 }
 
 .site-button {
@@ -768,7 +775,7 @@ img#qr-code {
         font-size: 3rem;
     }
 
-    .cta h2 {
+    h2.med {
         font-size: 1.75rem;
     }
 
@@ -776,16 +783,13 @@ img#qr-code {
         margin-top: 1.5rem;
     }
 
-    .pad-main-title h2 {
+    .slogan h2 {
         font-size: 1.4rem;
     }
 
 }
 
 @media (min-width: 50px) and (max-width: 600px) {
-    .site-button {
-        font-size: 1rem;
-    }
 
     header h1 {
         font-size: 2rem;
@@ -798,6 +802,11 @@ img#qr-code {
     .content-container {
         width: 100%;
         padding: 0 10px;
+    }
+
+    p.cta-desc {
+        /* color: rgb(17, 192, 195); */
+        font-size: 1.3rem;
     }
 
     .contact-section {
@@ -816,16 +825,13 @@ img#qr-code {
         height: auto;
     }
 
-    .cta h2 {
+    h2.med {
         font-size: 1.5rem;
+        letter-spacing: 0;
     }
 
     .cta h3 {
         font-size: 1.3rem;
-    }
-
-    .cta p {
-        font-size: 1rem;
     }
 
     .city-bg-image {
@@ -876,11 +882,9 @@ img#qr-code {
         /* background-color: green; */
     }
 
-    .content-container p {
+    p.cta-desc {
+        /* color: purple; */
         font-size: 1.4rem;
-        letter-spacing: .5px;
-        line-height: 1.5;
-        color: #424242;
     }
 
     .btn-close {
@@ -987,7 +991,7 @@ img#qr-code {
     }
 
     
-    .pad-main-title h2 {
+    .slogan h2 {
         font-size: 1rem;
     }
 }
@@ -1052,7 +1056,8 @@ img#qr-code {
         height: 300px;
     }
 
-    .content-container p {
+    p.cta-desc {
+        /* color: green; */
         font-size: 1.2rem;
     }
 
