--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h2.slogan {
     font-size: 1.5rem;
     letter-spacing: 1.5px;
     text-align: center;
-    color: #fde420;
+    color: #ffe200;
 }
 
 header a {
@@ -856,7 +856,7 @@ img#qr-code {
     }
 
     h2.slogan {
-        font-size: 1rem;
+        font-size: 1.2rem;
         line-height: 1.25;
     }
 
