lighten slogan font

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ section.business-cards {
 }
 
 h2.med {
-    color: #02679b;
+    color: #3a79ee;
     letter-spacing: 1px;
     font-size: 2rem;
     text-transform: uppercase;
