--- a/styles.css
+++ b/styles.css
@@ -285,11 +285,12 @@ p.cta-desc {
     max-width: 500px;
     width: 100%;
     height: 100%;
-    border: 2px solid #3a79ee;
+    /* border: 2px solid #3a79ee; */
     border-radius: 10px;
-    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
-    0 1px 3px rgba(0, 0, 0, 0.433); */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
+    0 1px 3px rgba(0, 0, 0, 0.433);
     background-color: #fbfcff;
+    background-color: #5e7bb3;
     /* overflow: hidden; ruins the entire card*/
 }
 
@@ -303,13 +304,14 @@ p.cta-desc {
 .image-card-container {
     width: 300px;
     height: 400px;
-    border-bottom: 2px solid #3a79ee;
+    /* border-bottom: 2px solid #111418; */
     /* border: 2px solid #3a79ee;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px; */
     background-color: none;
     /* overflow: hidden; */
 }
+
 
 .modal-image-card-container {
     width: 100%;
@@ -364,6 +366,7 @@ p.cta-desc {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #3a79ee;
+    color: #ffffff;
 }
 
 .business-name {
@@ -452,7 +455,7 @@ img.spotlight-logo {
     font-weight: 200;
     text-align: center;
     background-color: #0055ff;
-    border: 2px solid #0055ff;
+    border: 2px solid #ffffff;
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     transition: color 500ms;
