--- a/styles.css
+++ b/styles.css
@@ -290,7 +290,6 @@ p.cta-desc {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
     0 1px 3px rgba(0, 0, 0, 0.433);
     background-color: #fbfcff;
-    background-color: #5e7bb3;
     /* overflow: hidden; ruins the entire card*/
 }
 
@@ -304,14 +303,13 @@ p.cta-desc {
 .image-card-container {
     width: 300px;
     height: 400px;
-    /* border-bottom: 2px solid #111418; */
+    border-bottom: 2px solid #2e4063;
     /* border: 2px solid #3a79ee;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px; */
     background-color: none;
     /* overflow: hidden; */
 }
-
 
 .modal-image-card-container {
     width: 100%;
@@ -366,7 +364,6 @@ p.cta-desc {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #3a79ee;
-    color: #ffffff;
 }
 
 .business-name {
@@ -455,7 +452,7 @@ img.spotlight-logo {
     font-weight: 200;
     text-align: center;
     background-color: #0055ff;
-    border: 2px solid #ffffff;
+    border: 2px solid #0055ff;
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     transition: color 500ms;
