--- a/styles.css
+++ b/styles.css
@@ -224,8 +224,6 @@ p.cta-desc {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    /* width: 60px;
-    height: 60px; */
     border-radius: 50%;
     line-height: 2;
     border: none;
@@ -289,7 +287,7 @@ p.cta-desc {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
     0 1px 3px rgba(0, 0, 0, 0.433);
-    background-color: #fbfcff;
+    background-color: #d8e3fc;
     /* overflow: hidden; ruins the entire card*/
 }
 
@@ -303,7 +301,7 @@ p.cta-desc {
 .image-card-container {
     width: 300px;
     height: 400px;
-    border-bottom: 2px solid #2e4063;
+    /* border-bottom: 2px solid #2e4063; */
     /* border: 2px solid #3a79ee;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px; */
@@ -359,11 +357,11 @@ p.cta-desc {
 .business-name h2 {
     font-family: "Poppins", serif;
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1rem;
     /* font-style: italic; */
     text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #3a79ee;
+    letter-spacing: 1.5px;
+    color: #2761cd;
 }
 
 .business-name {
@@ -374,7 +372,7 @@ p.cta-desc {
     width: 100%;
     text-align: center;
     /* max-height: 100px; */
-    height: 3.25rem;
+    height: 2rem;
     margin: 10px 0;
     /* background-color: #4caf50; */
     /* background-color: rgb(58, 58, 58); */
@@ -448,7 +446,7 @@ img.spotlight-logo {
     width: 100%;
     border: none;
     border-radius: 50px;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     font-weight: 200;
     text-align: center;
     background-color: #0055ff;
@@ -1056,6 +1054,8 @@ img#qr-code {
 
     .modal .card {
         max-width: 320px;
+        max-width: 90vw;
+        max-height: 90vh;
     }
 
     .image-card-container {
@@ -1108,7 +1108,9 @@ img#qr-code {
     }
 
     .modal .card {
-        width: 270px;
+        /* width: 270px; */
+        max-width: 90vw;
+        max-height: 90vh;
     }
 
     .card p {
