revert back to old modal size

--- a/styles.css
+++ b/styles.css
@@ -1054,8 +1054,6 @@ img#qr-code {
 
     .modal .card {
         max-width: 320px;
-        max-width: 90vw;
-        max-height: 90vh;
     }
 
     .image-card-container {
@@ -1108,9 +1106,7 @@ img#qr-code {
     }
 
     .modal .card {
-        /* width: 270px; */
-        max-width: 90vw;
-        max-height: 90vh;
+        width: 270px;
     }
 
     .card p {
