center modal active

--- a/styles.css
+++ b/styles.css
@@ -539,6 +539,8 @@ img.spotlight-logo {
 
 .modal.active {
     display: flex; /* Display when active */
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content {    
