--- a/styles.css
+++ b/styles.css
@@ -1060,7 +1060,7 @@ img#qr-code {
         justify-content: center;
         align-items: center;
         max-width: 90vw;
-        max-height: 80%;
+        max-height: 80vh;
     }
 
     .image-card-container {
