--- a/styles2.css
+++ b/styles2.css
@@ -815,9 +815,9 @@ img#qr-code {
 @media (min-width: 50px) and (max-width: 600px) {
 
     header h1 {
-        font-size: 2rem;
+        font-size: 1.3rem;
     }
-
+    /*
     .pad-main-title {
         margin-top: .8rem;
     }
@@ -832,7 +832,7 @@ img#qr-code {
     }
 
     p.cta-desc {
-        /* color: rgb(17, 192, 195); */
+        /* color: rgb(17, 192, 195); 
         font-size: 1.3rem;
     }
 
@@ -885,11 +885,7 @@ img#qr-code {
 
     .site-button.campaign-btn {
         font-size: 1.3rem;
-    }
-
-    footer.small {
-        font-size: 1.2rem;
-    }
+    }*/
 }
 
 @media screen and (min-width: 600px) and (max-width: 800px) /* 600px wide or wider */{
@@ -1041,108 +1037,3 @@ img#qr-code {
         font-size: 1rem;
     }
 }
-
-@media  (max-width: 431px) /*below 431px*/ {
-
-    header h1{
-        font-size: 1.8rem;
-        font-weight: normal;
-    }
-
-    img.spotlight-logo {
-        width: 80px;
-        height: auto;
-    }
-
-    .modal-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 90vw;
-    }
-    
-    .image-card-container {
-        width: 250px;
-        height: 350px;
-    }
-    
-    .card {
-        height: auto;
-    }
-
-    .create .site-button {
-        padding: 4px 10px;
-    }
-    
-    .social-link.facebook {
-        font-size: 1rem;
-    }
-
-    .carousel-btn {
-        font-size: 30px;
-        padding: 2px 25px;
-    }
-}
-
-@media screen and (max-width: 389px) {
-
-    header h1 {
-        font-size: 1.5rem;
-    }
-
-    img.spotlight-logo {
-        width: 70px;
-        height: auto;
-    }
-    
-    .carousel {
-        padding-left: 0;
-    }
-    
-    .card-content {
-        max-height: 200px;
-        height: 100%;
-    }
-    
-    .image-card-container {
-        width: 200px;
-        height: 300px;
-    }
-
-    p.cta-desc {
-        /* color: green; */
-        font-size: 1.2rem;
-    }
-
-
-    .modal-content {
-        max-width: 100vw;
-        height: auto;
-    }
-
-    .card p {
-        font-size: .8rem;
-        line-height: 1.3;
-        letter-spacing: 1.2px;
-    }
-    
-    .business-name {
-        max-height: 60px;
-    }
-
-    .business-name h2 {
-        font-size: 1rem;
-    }
-
-    .campaign {
-        padding: 4px 8px;
-    }
-
-    .site-button {
-        padding: 2px;
-    }
-
-}
-
-
