--- a/styles2.css
+++ b/styles2.css
@@ -817,6 +817,21 @@ img#qr-code {
     header h1 {
         font-size: 1.3rem;
     }
+
+    .modal-image-card-container {
+        width: 100%;
+        height: 500px;
+    }
+
+    /* .modal.active {
+        padding: 30% 2%;
+    } */
+    .card {
+        width: 100%;
+        height: 100%;
+        max-height: 600px;
+    }
+
     /*
     .pad-main-title {
         margin-top: .8rem;
