--- a/styles2.css
+++ b/styles2.css
@@ -820,12 +820,12 @@ img#qr-code {
 
     .modal-image-card-container {
         width: 100%;
-        height: 500px;
+        height: 400px;
     }
 
-    /* .modal.active {
-        padding: 30% 2%;
-    } */
+    .modal.active {
+        padding: 0 5%;
+    }
     .card {
         width: 100%;
         height: 100%;
