--- a/styles2.css
+++ b/styles2.css
@@ -814,8 +814,26 @@ img#qr-code {
 
 @media (min-width: 50px) and (max-width: 600px) {
 
-    header h1 {
-        font-size: 1.3rem;
+}
+
+@media  (max-width: 431px) /*below 431px*/ {
+
+    header h1{
+        font-size: 1.8rem;
+        font-weight: normal;
+    }
+
+    img.spotlight-logo {
+        width: 80px;
+        height: auto;
+    }
+
+    .modal-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* max-width: 90vw; */
     }
 
     .modal-image-card-container {
@@ -826,224 +844,95 @@ img#qr-code {
     .modal.active {
         padding: 0 5%;
     }
-
-    /*
-    .pad-main-title {
-        margin-top: .8rem;
-    }
-
-    .custom-card h3 {
-        font-size: 1.75rem;
-    }
-
-    .content-container {
-        width: 100%;
-        padding: 0 10px;
-    }
-
-    p.cta-desc {
-        /* color: rgb(17, 192, 195); 
-        font-size: 1.3rem;
-    }
-
-    .contact-section {
-        border-radius: 0;
-        margin: 0;
-        padding: 15px 0 0;
-    }
-
-    .image-card-container {
-        width: 300px;
-        height: 450px;
-    }
-
-    img.spotlight-logo {
-        width: 80px;
-        height: auto;
-    }
-
-    .pad-hero {
-        padding: 20% 1%;
-    }
-
-    h2.med {
-        font-size: 1.5rem;
-        line-height: 1.2;
-        letter-spacing: 0;
-    }
-
-    h2.slogan {
-        font-size: 1.2rem;
-        line-height: 1.25;
-    }
-
-    .cta h3 {
-        font-size: 1.3rem;
-    }
-
-    .city-bg-image {
-        max-width: 600px;
-        width: 100%;
-        margin: 0;
-        height: 130px;
-    }
-
-    .social-link {
-        font-size: .8rem;
-        padding: 0;
-    }
-
-    .site-button.campaign-btn {
-        font-size: 1.3rem;
-    }*/
-}
-
-@media screen and (min-width: 600px) and (max-width: 800px) /* 600px wide or wider */{
-
-    header h1 {
-        font-size: 2.5rem;
-    }
-
-    .modal .card {
-        max-width: 250px;
-        width: 100%;
-    }
-
-    img.profile-picture {
-        width: 100px;
-        height: 100px;
-    }
-
-    .card-content {
-        max-height: 250px;
-        height: 100%;
-    }
     
-    .image-card-container {
-        width: 300px;
-        height: 450px;
-    }
-
-    .business-name h2 {
-        font-size: 1.3rem;
-    }
-
-    .content-container {
-        width: 95%;
-        justify-content: start;
-        /* background-color: green; */
-    }
-
-    p.cta-desc {
-        /* color: purple; */
-        font-size: 1.4rem;
-    }
-
-    .btn-close {
-        padding: 4px;
-        top: 1%;
-        right: 1%;
-        font-size: 5rem;
-    }
-
-    .contact-section {
-        border-radius: 0;
-        margin: 0;
-        padding: 20px 0 0;
-    }
-
-    .contact-section h2 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-    }
-
-    .social-link {
-        font-size: 1rem;
-        margin: .5rem 0 .5rem;
-    }
-
-    .upload-link {
-        margin-bottom: 1rem;
-    }
-
-    .social-link.facebook {
-        margin: 0;
-        padding: 0;
-    }
-
-}
-
-@media (max-width: 801px) { /* 801px width and below and below 601px ht */
-    
-    .modal .card {
-        max-width: 350px;
-        width: 100%;
-    }
-
-}
-
-@media screen and (max-width: 854px) and (max-height: 1400px){ /*below 854px width and below 1281 ht*/
-    .modal .card {
-        max-width: 350px;
-    }
-    .image-card-container {
-        width: 350px;
-        height: 450px;
-    }
-}
-
-@media screen and (max-width: 1200px) and (max-height: 1400px){ /*below 854px width and below 1281 ht*/
-    .modal .card {
-        max-width: 400px;
-    }
-    .image-card-container {
-        width: 400px;
-        height: 500px;
-    }
-}
-
-@media screen and (max-width: 1200px) and (max-height: 601px){ /*below 854px width and below 601 ht*/
-    .modal .card {
-        max-width: 400px;
-    }
-    .image-card-container {
-        width: 250px;
-        height: 300px;
-    }
-}
-
-@media (min-height: 720px) and (max-height: 800px) {
-    .modal .card {
-        max-width: 300px;
-    }
-}
-
-@media (max-height: 600px) {
-    .modal .card {
-        max-width: 250px;
-    }
-    .business-name h2 {
-        font-size: 1.3rem;
-    }
-    .site-button {
-        padding: 4px;
-        font-size: 1rem;
-    }
-}
-
-@media (max-width: 600px) {
-    img.profile-picture {
-        width: 100px;
-        height: auto;
-    }
-
     .image-card-container {
         width: 250px;
         height: 350px;
     }
-
     
-    .slogan h2 {
+    .card {
+        height: auto;
+    }
+
+    .create .site-button {
+        padding: 4px 10px;
+    }
+    
+    .social-link.facebook {
         font-size: 1rem;
     }
+
+    .carousel-btn {
+        font-size: 30px;
+        padding: 2px 25px;
+    }
+}
+@media screen and (max-width: 389px) {
+
+    header h1 {
+        font-size: 1.5rem;
+    }
+
+    img.spotlight-logo {
+        width: 70px;
+        height: auto;
+    }
+    
+    .carousel {
+        padding-left: 0;
+    }
+    
+    .card-content {
+        max-height: 200px;
+        height: 100%;
+    }
+
+    .modal-image-card-container {
+        width: 100%;
+        height: 300px;
+    }
+
+    .modal.active {
+        padding: 0 5%;
+    }
+    
+    
+    .image-card-container {
+        width: 200px;
+        height: 300px;
+    }
+
+    p.cta-desc {
+        /* color: green; */
+        font-size: 1.2rem;
+    }
+
+/* 
+    .modal-content {
+        max-width: 100vw;
+        height: auto;
+    } */
+
+    .card p {
+        font-size: .8rem;
+        line-height: 1.3;
+        letter-spacing: 1.2px;
+    }
+    
+    .business-name {
+        max-height: 60px;
+    }
+
+    .business-name h2 {
+        font-size: 1rem;
+    }
+
+    .campaign {
+        padding: 4px 8px;
+    }
+
+    .site-button {
+        padding: 2px;
+    }
+
 }
