--- a/styles.css
+++ b/styles.css
@@ -1070,6 +1070,10 @@ img#qr-code {
     .modal.active {
         padding: 0 6%;
     }
+    
+    .modal .card {
+        max-width: 400px;
+    }
 
     .image-card-container {
         width: 250px;
