--- a/styles.css
+++ b/styles.css
@@ -1175,7 +1175,7 @@ img#qr-code {
     .cta-button {
         font-size: 1rem;
         padding: 6px 15px;
-        margin: 15px 0 0;
+        margin: 15px 0;
     }
 }
 
