--- a/styles.css
+++ b/styles.css
@@ -279,9 +279,9 @@ p.cta-desc {
     line-height: 2;
     border: none;
     /* background: rgba(0, 0, 0, 0.6); */
-    background: rgba(255, 255, 255, 0.6);
-    border: 2px solid rgba(32, 32, 32, 0.6);
-    color: rgba(32, 32, 32, 0.6);
+    background: rgba(32, 32, 32, 0.315);
+    border: 2px solid rgba(133, 132, 132, 0.6);
+    color: rgba(255, 255, 255, 0.632);
     /* color: white;   */
     font-size: 40px;
     padding: 10px 40px;
@@ -293,10 +293,10 @@ p.cta-desc {
     z-index: 10;
 
     &&:hover{
-        background: rgba(139, 139, 139, 0.8);
+        background: rgba(139, 139, 139, 0.229);
     }
     &&:active {
-        background: rgba(255, 255, 255, 0.6);
+        background: rgba(255, 255, 255, 0.349);
     }
 }
 
@@ -612,6 +612,9 @@ img.spotlight-logo {
     position: absolute;
     top: 1%;
     right: 1%;
+    /* font-size: 3rem; */
+    width: 4rem;
+    height: 4rem;
     font-size: 3rem;
     font-weight: normal;
     color: rgb(221, 221, 221);
@@ -620,7 +623,7 @@ img.spotlight-logo {
     line-height: .5;
     border: none;
     border-radius: 50%;
-    background-color: rgba(46, 45, 45, 0.518);
+    background-color: rgba(46, 45, 45, 0.445);
     z-index: 9999;
     transition: 0.3s;
     &&:hover{
@@ -1000,10 +1003,8 @@ img#qr-code {
     }
 
     .btn-close {
-        padding: 4px;
         top: 1%;
         right: 1%;
-        font-size: 5rem;
     }
 
     .contact-section {
