--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,9 @@ header h1 {
 }
 
 h2.slogan {
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-weight: 500;
     text-transform: uppercase;
     font-size: 1.5rem;
     letter-spacing: 1.5px;
@@ -1113,7 +1113,7 @@ img#qr-code {
 
     header h1{
         font-size: 1.8rem;
-        font-weight: normal;
+        font-weight: 500;
     }
 
     img.spotlight-logo {
@@ -1185,6 +1185,10 @@ img#qr-code {
 
     header h1 {
         font-size: 1.5rem;
+    }
+
+    h2.slogan {
+        margin-top: .25rem;
     }
 
     img.spotlight-logo {
